test/fixtures/config/theming/error/nodeModulesNotFound/.gulp.js
module.exports = {
  log: {
    msgs: {
      error: {
        nodeModulesNotFound: 'LOCAL MODULE NOT FOUND {Path: {1}}',
      },
    },
    theme: {
      Path: '**{1}**',
    },
  },
};
